--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,7 +153,7 @@ add_executable(goal_manager_loader src/self-test/task_loader.cpp)
 add_executable(task_listener_loader src/self-test/task_listener_loader.cpp)
 add_executable(task_container_test src/self-test/task_container_test.cpp)
 add_executable(task_container_usage_test src/self-test/task_container_usage_test.cpp src/task_container.cpp)
-add_executable(task_executor_test src/self-test/task_executor_test.cpp src/task_container.cpp)
+add_executable(task_executor_test src/self-test/task_executor_test.cpp src/task_container.cpp src/task_executor.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(decision_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
