--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   roslint
   std_msgs
   pluginlib
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -65,11 +66,10 @@ endif()
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  TaskGoalMsg.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -86,10 +86,10 @@ endif()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -152,6 +152,7 @@ include_directories(
 # add_executable(decision_manager_node src/decision_manager_node.cpp)
 
 add_library(goal_manager_lib src/tasklib/goal_manager.cpp)
+add_dependencies(goal_manager_lib decision_manager_generate_messages_cpp)
 add_library(finding_tool_lib src/tasklib/finding_tool.cpp)
 add_executable(decision_manager ${PROJECT_SRC})
 add_executable(goal_manager_loader src/self-test/task_loader.cpp)
