--- a/package.xml
+++ b/package.xml
@@ -46,12 +46,14 @@
   <build_depend>rostest</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>rostest</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>pluginlib</run_depend>
+  <run_depend>message_runtime</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
